<resources>
    <string name="app_name">铁路巡检</string>

    <string name="fly_task">任务</string>
    <string name="back">返回</string>

    <string name="stopMission">取消任务</string>

    <string name="mission_start">开始飞行任务</string>
    <string name="mission_pause">暂停飞行任务</string>
    <string name="mission_spacing">飞行间距：%s米</string>
    <string name="mission_altitude">飞行高度：%s米</string>
    <string name="mission_speed">飞行速度：%s米/秒</string>
    <string name="mission_distance">航线长度：%s米</string>
    <string name="mission_time">飞行时间：%s</string>
    <string name="mission_timeInterval">拍照间隔：%s秒</string>
    <string name="mission_timeInterval_close">拍照间隔：关</string>
    <string name="mission_gimbalPitch">云台俯角：%s度</string>
    <string name="mission_ATH">完成后自动返航：</string>

    <string name="mission_cancel">取消上传任务</string>
    <string name="mission_resume">恢复飞行任务</string>
    <string name="mission_upload">上传飞行任务</string>
    <string name="mission_sure">确定</string>

    <string name="mission_item_title">分段设置</string>
    <string name="mission_item_lat">经度：</string>
    <string name="mission_item_long">纬度：</string>
    <string name="mission_item_alt">高度：</string>

    <string name="start_mission_alert">立即开始飞行任务\n请确保飞行器在安全的飞行状态</string>
    <string name="start_mission_nogps_alert">正在自动获取返航位置 ，请稍后</string>

    <string name="alert_init">正在初始化...</string>

    <string name="fly_map_type_satellite">卫星</string>
    <string name="fly_map_type_normal">标准</string>

    <string name="item_low_battery_back">低电返航</string>
    <string name="item_connection_fail_back">失控返航</string>
    <string name="item_back_height">返航高度</string>
    <string name="item_push_switch">推流开关</string>
    <string name="item_video_data_switch">数据叠加</string>
    <string name="item_media_upload_switch">媒体上传</string>
    <string name="item_waypoint_sync_switch">航线同步</string>
    <string name="item_realtime_control_switch">实时控制</string>

    <string name="setting_fly_book">飞行宝典</string>
    <string name="setting_fly_record">飞行记录</string>
    <string name="setting_version_check">版本监测</string>
    <string name="setting_call_us">联系我们</string>
    <string name="setting_login">帐号登录</string>
    <string name="setting_logout">退出登录</string>

    <string name="video_msg_height">H:%sM</string>
    <string name="video_msg_distance">D:%sM</string>
    <string name="video_msg_speed">S:%sM/S</string>
    <string name="video_msg_latlng">%sN %sE</string>
    <string name="video_msg_angle">B:%s°</string>

    <string name="action_settings">设置</string>
    <string name="action_sync">同步</string>
    <string name="action_delete">删除</string>
    <string name="action_upload">上传</string>


    <string name="fly_record_index">编号：</string>
    <string name="fly_record_time">时间：</string>
    <string name="fly_record_latitude">纬度：</string>
    <string name="fly_record_longitude">经度：</string>
    <string name="fly_record_altitude">高度：</string>
    <string name="fly_record_horizontal_speed">水平速度：</string>
    <string name="fly_record_vertical_speed">垂直速度：</string>

    <string name="error_aircraft_disconnect">无人机断开连接</string>

    <string name="phone_hint">请输入手机号码</string>
    <string name="check_code_hint">短信验证码</string>
    <string name="account_hint">请输入帐户号码</string>
    <string name="account_register_hint">帐号为4～24位字母、数字或下划线</string>
    <string name="password_hint">请输入帐户密码</string>
    <string name="password_register_hint">密码为8～24位字母、数字或下划线</string>
    <string name="password_confirm_hint">请确认帐户密码</string>
    <string name="company_hint">请输入单位名称</string>
    <string name="name_hint">请输入用户昵称</string>
    <string name="activation_hint">请输入激活码</string>

    <string name="btn_require_check_code">获取验证码</string>
    <string name="btn_login">登录</string>
    <string name="btn_open">开启</string>

    <string name="btn_register">注册</string>
    <string name="btn_sure">确认</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_reactivation">重新激活</string>
    <string name="btn_last">上一个</string>
    <string name="btn_next">下一个</string>
    <string name="btn_tips">提示</string>
    <string name="btn_known">知道了</string>

    <string name="title_tips">提示</string>

    <string name="dialog_rc_disconnect">1、打开遥控器，等待跳出APP选择框。如果长时间等待没有跳出APP选择框，则找平板的【设置】-》【应用】-》【全部】-》寻找DJI GO4、DJI Pilot、铁路巡检 这些APP，分别点进去，点击【清除默认操作】，重启遥控器，再执行第1步；\n2、选择APP选择框里的【铁路巡检】，再点击仅此一次。\n3、打开【铁路巡检】应用软件</string>
    <string name="dialog_flight_disconnect">打开飞机，观察遥控器是否已连上飞机，如果遥控器没连上飞机，请重启飞机或者对遥控器和飞机进行对频操作</string>
    <string name="dialog_phone_login_title">手机号码登录</string>
    <string name="dialog_phone_register_title">手机号码注册</string>
    <string name="dialog_user_login_title">帐户号码登录</string>
    <string name="dialog_pswd_register_title">用户密码设置</string>
    <string name="dialog_user_detail_title">用户详细信息</string>
    <string name="dialog_user_alter_title">用户密码修改</string>
    <string name="dialog_detail_alter_title">用户信息修改</string>
    <string name="dialog_user_activation_title">帐号激活</string>
    <string name="dialog_product_detail_title">激活信息</string>

    <string name="btn_user_login">帐号登录</string>
    <string name="btn_phone_login">手机登录</string>
    <string name="btn_user_register">用户注册</string>
    <string name="btn_alter">修改</string>
    <string name="btn_detail_alter">修改信息</string>

    <string name="air_device_entry">立即飞行</string>
    <string name="air_data_entry">飞行记录</string>


    <string name="api_network_error">网络连接超时</string>
    <string name="api_server_error">服务器连接错误%d</string>

    <string name="api_return_error">返回错误：%d</string>

    <string name="register_success">注册成功</string>
    <string name="alter_success">修改成功</string>
    <string name="activation_success">激活成功</string>
    <string name="alert_register_failed">注册失败，请连接互联网</string>

    <string name="user_expired">凭证过期，请重新登录</string>
    <string name="user_force">帐号被迫强制退出，假如非本人操作，请尽快修改密码</string>
    <string name="alert_request_connect">是否允许管理员：%s 进行实时远程操作</string>

    <string name="user_uname">未命名</string>
    <string name="user_logout">未登录</string>

    <string name="msg_waitting">请等待。。。</string>
    <string name="msg_delete">是否确认删除</string>
    <string name="msg_phone_format_error">请输入11位手机号码</string>
    <string name="msg_account_format_error">帐号为4～24位字母、数字或下划线</string>
    <string name="msg_password_format_error">密码为8～24位字母、数字或下划线</string>
    <string name="msg_password_not_same">两次输入的密码不一致</string>
    <string name="msg_account_empty">请输入账户号码</string>
    <string name="msg_password_empty">请输入用户密码</string>
    <string name="msg_check_code_empty">请输入短信验证码</string>
    <string name="msg_name_empty">请输入用户昵称</string>
    <string name="msg_company_empty">请输入公司名称</string>
    <string name="msg_user_is_exist">用户已存在</string>
    <string name="msg_user_not_exist">用户不存在</string>
    <string name="msg_password_error">密码错误</string>
    <string name="msg_password_are_same">新旧密码不能相同</string>
    <string name="msg_code_empty">请输入激活码</string>
    <string name="msg_user_unlogin">用户没登录</string>
    <string name="msg_aircraft_unlink">请先连接无人机！</string>
    <string name="msg_upload_success">上传成功</string>
    <string name="msg_must_login_error">必须要登录大疆帐号，否则无人机会处于新手模式，飞行时将会限高30M限远30M！</string>
    <string name="msg_network_error">没有连接网络或网络不可用，联网后可帐号登录和检测版本更新,软件版本过低可能会导致无法正常使用！请尽快打开网络设置连接网络！</string>

    <string name="msg_user_sms_not_exist">没有请求发送验证码</string>
    <string name="msg_user_sms_code_error">验证码错误</string>

    <string name="msg_user_sms_too_dense">发送验证码过于频繁</string>
    <string name="msg_user_sms_timeout">验证码失效</string>

    <string name="msg_user_activation_code_not_exist">激活码不存在</string>
    <string name="msg_user_activaiotn_code_bt_used">激活码已被使用</string>
    <string name="msg_product_not_exist">产品不存在</string>

    <string name="msg_other_error">其他错误</string>
    <string name="msg_push_link_error">推流服务器连接失败</string>

    <string name="user_option_icon">头像</string>
    <string name="user_option_name">昵称</string>
    <string name="user_option_account">DJI帐号</string>
    <string name="user_option_phone">手机</string>
    <string name="user_option_company">公司</string>
    <string name="user_option_activation">激活</string>
    <string name="user_option_pswd">密码</string>
    <string name="user_option_no_activation">未激活</string>
    <string name="user_option_is_activation">已激活</string>

    <string name="product_live_label">视频直播</string>
    <string name="product_video_data_label">数据叠加</string>
    <string name="product_media_upload_label">媒体上传</string>
    <string name="product_waypoint_sync_label">航线同步</string>
    <string name="product_flydata_sync_label">飞行数据同步</string>
    <string name="product_realtime_control_label">实时控制</string>
    <string name="product_gas_enable_label">气体监测</string>
    <string name="product_water_enable_label">水样采取</string>

    <string name="book_notice_before_flying">1. 起飞前观察所飞行的环境；\n2. 飞行前进行指南针校准和检查 IMU 的状态， 如需校准，请及时进行 IMU 参数校准；\n3. 设置适当的返航高度，留意低电量自动返航的提示；\n4. 在地面静置飞行器上电，请勿在晃动中上电。在晃动中上电，会导致飞行器传感器产生偏差，导致飞行器的航向轴漂移；\n5. 在 DJI GO 中开启多模式开关，在飞行器受指南针干扰后，手动切成姿态模式，会切掉指南针与 GPS 模块的工作状态，这时候使用自动返航功能是无效的； \n6. 操控飞行器时请柔和打杆，一般情况下请勿持续打满杆量，避免飞行器转换航向时由于惯性过大导致漂移较快，防止出现判断失误与控制失误的情况。</string>
    <string name="book_compass_calibration1">1. 指南针数据异常，飞行器状态指示灯显示红黄交替闪烁；\n2. 飞行场地与上一次指南针校准的场地相距较远；\n3. 飞行器维修后；\n4. 飞行时漂移严重，不能直线飞行。</string>
    <string name="book_compass_calibration2">飞行时，请确保在新的飞行场地进行指南针校准。\n若在地面成功校准指南针后，飞行器在空中仍出现 “指南针报错” 的警告信息，表明客户的飞行场地的磁场环境复杂，请更换一个飞行场地飞行。\n如果更换不同的场地飞行，指南针一直报警或校准一直无法通过，请联系大疆创新技术支持进一步分析。</string>
    <string name="book_vision_system">由于视觉系统容易受光照强度，物体表面纹理情况的影响。超声波在某些吸音材料上也容易出现不能正常测距的情况。在视觉系统和超声波都失效的情况下，视觉定位模式会自动切换到姿态模式。所以以下场景，谨慎使用视觉定位：\n\n1. 低空（0.5 米以下）快速飞行时，视觉定位系统可能会无法定位。纯色表面（例如纯黑、纯白、纯红、纯绿），有强烈反光或者倒影的表面；\n2. 飞行器速度不宜过快，如离地 1 米处时飞行速度不可超过 4 米/秒，离地 2 米不可超过 8 米/秒；\n3. 水面或者透明物体表面，运动物体表面（例如人流上方、大风吹动的灌木或者草丛上方），光照剧烈快速变化的场景；\n4. 在特别暗（光照小于 10LUX）或者特别亮（光照大于 10,000LUX）的物体表面；\n5. 对超声波有很强吸收作用的材质表面（例如很厚的地毯）纹理特别稀疏的表面。纹理重复度很高的物体表面（例如颜色相同的小格子砖）；\n6. 倾斜度超过 30 度的物体表面（不能收到超声波回波）； \n\n使用 P 模式飞行，如果遥控器信号断开，并且视觉定位系统工作正常，则飞行器将悬停 8 秒后自动降落；\n\n注：\n确保视觉定位系统的单目镜头清晰无污点。\n视觉定位系统使用高度为 3 米以内。\n由于视觉定位系统依赖地表图像来获取位移信息，确保周边环境光源充足，地面纹理丰富。\n视觉定位系统在水面、光线昏暗以及地面无清晰纹理的环境中无法定位。在使用视觉定位系统的过中，注意附近不要开启其它 40KHz 超声波设备，包括其它飞行器；\n由于视觉定位系统会发出人耳无法识别的超声波，该超声波或会引起动物不安，使用时请远离动物。</string>
    <string name="book_stick">1. 遥控器摇杆中位误差过大, 需要进行摇杆校准；\n2. 飞行器设定在新手模式，且周围无 GPS 信号；\n3. 飞行器传感器误差过大，飞机尾灯红灯常亮；\n4. 电调自检不通过，脚架 LED 黄灯常亮；\n5. 确认飞行器电池各项参数；\n6. 指南针误差过大，需要校准；\n7. App 飞控参数中的高度设置为 “0” 米 。</string>

    <string name="rc_disconnect">遥控器未连接</string>
    <string name="rc_connected">遥控器已连接</string>
    <string name="rc_connected_with_name">遥控器 %s</string>
    <string name="flight_disconnect">无人机未连接</string>
    <string name="flight_connected">%s</string>
    <string name="device_connecting">设备连接中(%d)</string>
    <string name="device_disconnect">设备未连接</string>
    <string name="device_connected">%s</string>


    <string name="device_type_none">未知</string>
    <string name="device_type_air_detector">先知AM V2 大气监测仪</string>
    <string name="device_type_water_sampler">先知AM 水样采集仪</string>
    <string name="device_type_flow_detector">先知AM 流速采集仪</string>

    <array name="mission_types">
        <item>网格飞行</item>
        <item>航点线路</item>
    </array>

    <array name="phone_prefixer_types">
        <item>中国大陆 +86</item>
        <item>香港 +852</item>
        <item>澳门 +853</item>
        <item>台湾 +886</item>
        <item>日本 +81</item>
        <item>韩国 +82</item>
        <item>美国 +1</item>
        <item>英国 +44</item>
        <item>澳大利亚 +61</item>
        <item>加拿大 +1</item>
    </array>
</resources>
