<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@color/black"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="350dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/item_low_battery_back"
                    android:textColor="@color/white" />

                <SeekBar
                    android:id="@+id/sekLowBattery"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtLowBattery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/item_back_height"
                    android:textColor="@color/white" />

                <SeekBar
                    android:id="@+id/sekBackHeight"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/txtBackHeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/item_connection_fail_back"
                    android:textColor="@color/white" />

                <Switch
                    android:id="@+id/swrConnectionFailBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:switchMinWidth="50dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPush"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/item_push_switch"
                    android:textColor="@color/white" />

                <Switch
                    android:id="@+id/swrPush"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:switchMinWidth="50dp" />

                <TextView
                    android:id="@+id/txtPush"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutVideoData"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/item_video_data_switch"
                    android:textColor="@color/white" />

                <Switch
                    android:id="@+id/swrVideoData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:switchMinWidth="50dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutMediaUpload"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/item_media_upload_switch"
                    android:textColor="@color/white" />

                <Switch
                    android:id="@+id/swrMediaUpload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:switchMinWidth="50dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutWaypointSync"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/item_waypoint_sync_switch"
                    android:textColor="@color/white" />

                <Switch
                    android:id="@+id/swrWaypointSync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:switchMinWidth="50dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutRealTimeControl"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/item_realtime_control_switch"
                    android:textColor="@color/white" />

                <Switch
                    android:id="@+id/swrRealTimeControl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:switchMinWidth="50dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>